Implement fuzzing Program.cs

--- a/src/Roslyn.Fuzz.csproj
+++ b/src/Roslyn.Fuzz.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.7.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.10.0" />
     <PackageReference Include="SharpFuzz" Version="1.4.3" />
   </ItemGroup>
 
