--- a/Roslyn/src/Roslyn.Fuzz.csproj
+++ b/Roslyn/src/Roslyn.Fuzz.csproj
@@ -9,6 +9,13 @@
     <PackageReference Include="Google.Protobuf" Version="3.7.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.1.0" />
     <PackageReference Include="SharpFuzz" Version="1.5.0" />
+
+    <PackageReference Include="Grpc.Tools" Version="1.21.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+
+    <Protobuf Include="../build/roslyn.proto" />
   </ItemGroup>
 
 </Project>
