--- a/AspNetCore/src/AspNetCore.Fuzz.csproj
+++ b/AspNetCore/src/AspNetCore.Fuzz.csproj
@@ -7,8 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="SharpFuzz" Version="1.5.0" />
+
+    <PackageReference Include="Grpc.Tools" Version="1.21.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+
+    <Protobuf Include="../build/http.proto" />
   </ItemGroup>
 
 </Project>
