--- a/AspNetCore/Dockerfile
+++ b/AspNetCore/Dockerfile
@@ -52,6 +52,7 @@ COPY src/*.cs ./
 COPY build/http.proto /app/build/
 
 RUN dotnet publish -r linux-x64 --no-restore -c release -o out \
+	&& for file in out/Microsoft.AspNetCore.Http.*; do echo "$file" && sharpfuzz "$file"; done \
 	&& sharpfuzz out/Microsoft.AspNetCore.Server.Kestrel.Core.dll -System.IO.Pipelines.DuplexPipe
 
 FROM mcr.microsoft.com/dotnet/core/runtime:2.2
