Instrument more assemblies and increase keep-alive timeout

--- a/AspNetCore/Dockerfile
+++ b/AspNetCore/Dockerfile
@@ -53,7 +53,7 @@ COPY build/http.proto /app/build/
 
 RUN dotnet publish -r linux-x64 --no-restore -c release -o out \
 	&& for file in out/Microsoft.AspNetCore.Http.*; do echo "$file" && sharpfuzz "$file"; done \
-	&& sharpfuzz out/Microsoft.AspNetCore.Server.Kestrel.Core.dll -System.IO.Pipelines.DuplexPipe
+	&& for file in out/Microsoft.AspNetCore.Server.*; do echo "$file" && sharpfuzz "$file" -System.IO.Pipelines.DuplexPipe; done
 
 FROM mcr.microsoft.com/dotnet/core/runtime:2.2
 WORKDIR /app
