Initial version of the full fuzzing code

--- a/Wpf/src/Wpf.Fuzz.csproj
+++ b/Wpf/src/Wpf.Fuzz.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
 
     <Protobuf Include="../build/layout.proto" />
+	<Protobuf Include="../build/response.proto" />
   </ItemGroup>
 
   <PropertyGroup>
